Fix bug: forms should fit on mobile screen

--- a/style/forms.css
+++ b/style/forms.css
@@ -10,10 +10,8 @@ input {
     border: thin gray solid;
     line-height: 1.25em;
     padding: .625em;
-    width:20em;
     box-shadow:inset 0 0 10px #ddd;
 }
-
 
 label {
     display:block;
